Add tofu.html and add image index.html
Add tofu.html page and modify tamagoyaki.html and ramen.html adding list

--- a/recipes/tamagoyaki.html
+++ b/recipes/tamagoyaki.html
@@ -4,11 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tamagoyaki recipe</title>
 </head>
 <body>
     <h1>Tamagoyaki</h1>
-    <img src="../images/tamagoyaki.webp" alt="A cartoon image of a steaming tamagoyaki (japanese omelette)"/>
 
+      <img src="../images/tamagoyaki.webp" alt="A cartoon image of a steaming tamagoyaki (japanese omelette)"/>
+     
+      <h2>Description</h2>
+        <p>It's easy to make authentic Japanese food at home with this classic Japanese omelette recipe. 
+           Tamagoyaki is slightly sweet and seasoned with soy sauce, mirin, and dashi stock.</p>
+        <p>It's a favorite in bento boxes and also makes an easy Japanese appetizer. Serve with shredded daikon and soy sauce for dipping.</p>
+
+      <h2>Ingredients</h2>
+        <ul>
+            <li>4 eggs</li>
+            <li>4 tablespoons prepared dashi stock</li>
+            <li>1 tablespoon white sugar</li>
+            <li>1 teaspoon mirin (Japanese sweet wine)</li>
+            <li>½ teaspoon soy sauce</li>
+            <li>½ tablespoon vegetable oil</li>
+        </ul>
+    <a href="../index.html">Back</a>
 </body>
 </html>
