--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Japanese Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-       <li><a href="./recipes/tamagoyaki.html">Tamagoyaki</a></li>
-       <li><a href="./recipes/ramen.html">Spicy Asian Ramen Noodles</a></li>
-       <li></li>
-    </ul>
+    <h1>Japanese recipes</h1>
+
+      <img src="./images/index-image.gif"/>
+      <ul>
+         <li><a href="./recipes/tamagoyaki.html">Tamagoyaki</a></li>
+         <li><a href="./recipes/ramen.html">Spicy Asian Ramen Noodles</a></li>
+         <li></li>
+      </ul>
     
 </body>
 </html>
