Add tofu.html image

--- a/recipes/tofu.html
+++ b/recipes/tofu.html
@@ -7,6 +7,7 @@
     <title><Japanese soup recipe></title>
 </head>
 <body>
-    
+    <h1>Japanese Soup with Tofu and Mushrooms</h1>
+      <img src="../images/tofu.gif"/>
 </body>
 </html>
