--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <ul>
          <li><a href="./recipes/tamagoyaki.html">Tamagoyaki</a></li>
          <li><a href="./recipes/ramen.html">Spicy Asian Ramen Noodles</a></li>
-         <li></li>
+         <li><a href="./recipes/tofu.html">Japanese Soup with Tofu and Mushrooms</a></li>
       </ul>
     
 </body>
