--- a/recipes/tamagoyaki.html
+++ b/recipes/tamagoyaki.html
@@ -25,6 +25,17 @@
             <li>½ teaspoon soy sauce</li>
             <li>½ tablespoon vegetable oil</li>
         </ul>
+      <h2>Steps</h2>
+        <ol>
+          <li>Whisk eggs, dashi stock, sugar, mirin, and soy sauce together in a bowl.</li>
+          <li>Heat 1/3 of the oil in a large nonstick skillet over medium-high heat. 
+            Add about 1/3 of the egg mixture and quickly swirl the pan to evenly cover the bottom.<br> 
+            Start rolling up the omelette from one side to the other as soon as it is set.</li>
+          <li>Keep the roll to one side, then add another 1/3 of the oil to the skillet and another 1/3 of the egg. Swirl the pan, ensuring the entire bottom is covered, including around and underneath the first roll. 
+            <br>Cook until set. Roll up from the side containing the first roll, so that is now at the center.</li>
+          <li>Repeat the process with the remaining oil and egg. Transfer rolled omelette to a bamboo rolling mat. Roll up tightly and allow to cool for a few minutes.</li>
+          <li>Unwrap the omelette and slice into 6 pieces. Serve warm or cold.</li>
+        </ol>
     <a href="../index.html">Back</a>
 </body>
 </html>
