Complete tofu.html
Added link to recipes site in index.html, added alt to tofu img and
finished the page

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
          <li><a href="./recipes/ramen.html">Spicy Asian Ramen Noodles</a></li>
          <li><a href="./recipes/tofu.html">Japanese Soup with Tofu and Mushrooms</a></li>
       </ul>
-    
+      
+        <h3>Recipes credit:<a href="https://www.allrecipes.com/"> Allrecipes</a></h3>
 </body>
 </html>
