--- a/recipes/ramen.html
+++ b/recipes/ramen.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Spicy Asian Ramen Noodles</h1>
     
-      <img src="../images/ramen.gif" alt="A cartoon image of a ramen bowl, with pork, an egg and scallion on it"/>
+      <img src="../images/ramen.gif" alt="A cartoon image of a ramen bowl, with pork, an egg and scallion in it"/>
      
       <h2>Description</h2>
         <p>I admit it, I still love ramen. In this yummy recipe, expect fast, easy, and spicy with salty, sweet, and sour flavors kicking in. 
@@ -22,7 +22,7 @@
           <ul>
               <li>3 tablespoons reduced-sodium soy sauce</li>
               <li>2 tablespoons sesame oil</li>
-              <li>1 ½ tablespoons brown sugar</li>
+              <li>1½ tablespoons brown sugar</li>
               <li>1 tablespoon rice vinegar</li>
               <li>2 teaspoons chili-garlic sauce, or more to taste</li>
               <li>1 teaspoon grated fresh ginger</li>
