Modify css index.html

--- a/recipes/ramen.html
+++ b/recipes/ramen.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Spicy Asian Ramen Noodles</h1>
     
-      <img src="../images/ramen.gif" alt="A cartoon image of a ramen bowl, with pork, an egg and scallion in it"/>
+      <img src="../images/ramen.gif" class="gif" alt="A cartoon image of a ramen bowl, with pork, an egg and scallion in it"/>
      
       <h2>Description</h2>
         <p>I admit it, I still love ramen. In this yummy recipe, expect fast, easy, and spicy with salty, sweet, 
