--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
     <h1>Japanese recipes</h1>
 
-      <img src="./images/index-image.gif"/>
+      <img class="gif" src="./images/index-image.gif" alt="A cartoon gif of a person taking a picture of Japanese food"/>
       <ul>
-         <li><a href="./recipes/tamagoyaki.html">Tamagoyaki</a></li>
-         <li><a href="./recipes/ramen.html">Spicy Asian Ramen Noodles</a></li>
-         <li><a href="./recipes/tofu.html">Japanese Soup with Tofu and Mushrooms</a></li>
+         <li><a class="list" href="./recipes/tamagoyaki.html">Tamagoyaki</a></li>
+         <li><a class="list" href="./recipes/ramen.html">Spicy Asian Ramen Noodles</a></li>
+         <li><a class="list" href="./recipes/tofu.html">Japanese Soup with Tofu and Mushrooms</a></li>
       </ul>
       
         <h3>Recipes credit:<a href="https://www.allrecipes.com/"> Allrecipes</a></h3>
