--- a/recipes/tamagoyaki.html
+++ b/recipes/tamagoyaki.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Tamagoyaki</h1>
 
-      <img src="../images/tamagoyaki.webp" alt="A cartoon image of a steaming tamagoyaki (japanese omelette)"/>
+      <img src="../images/tamagoyaki.webp" class="gif" alt="A cartoon image of a steaming tamagoyaki (japanese omelette)"/>
      
       <h2>Description</h2>
         <p>It's easy to make authentic Japanese food at home with this classic Japanese omelette recipe. 
