--- a/recipes/tofu.html
+++ b/recipes/tofu.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <h1>Japanese Soup with Tofu and Mushrooms</h1>
-      <img src="../images/tofu.gif" alt="A cartoon image of a steaming Japanese soup with tofu and herbs in it"/>
+      <img src="../images/tofu.gif" class="gif" alt="A cartoon image of a steaming Japanese soup with tofu and herbs in it"/>
 
       <h2>Description</h2>
         <pr>Miso is a fermented soy bean paste that adds a rich flavor. 
