--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
     <title>Japanese Recipes</title>
 </head>
 <body>
-    <h1>Japanese recipes</h1>
+    <h1 class="rainbow">Japanese recipes</h1>
 
       <img class="gif" src="./images/index-image.gif" alt="A cartoon gif of a person taking a picture of Japanese food"/>
-      <ul>
-         <li><a class="list" href="./recipes/tamagoyaki.html">Tamagoyaki</a></li>
-         <li><a class="list" href="./recipes/ramen.html">Spicy Asian Ramen Noodles</a></li>
-         <li><a class="list" href="./recipes/tofu.html">Japanese Soup with Tofu and Mushrooms</a></li>
+      <ul class="main-list" style="list-style-type:none;">
+         <li><a href="./recipes/tamagoyaki.html">Tamagoyaki</a></li>
+         <li><a href="./recipes/ramen.html">Spicy Asian Ramen Noodles</a></li>
+         <li><a href="./recipes/tofu.html">Japanese Soup with Tofu and Mushrooms</a></li>
       </ul>
-      
+        <br> 
+        <br>
         <h3>Recipes credit:<a href="https://www.allrecipes.com/"> Allrecipes</a></h3>
 </body>
 </html>
